# simple-library

./: .travis.yml  CMakeLists.txt  README.md
include/: inc.h
src/: CMakeLists.txt  lib.cc
tests/: CMakeLists.txt  TestAbs.cc
